# drone-cortexm

./: CHANGELOG.md  Cargo.toml  Drone.toml  Justfile  README.md  Xargo.toml  build.rs  clippy.toml  flake.nix  rust-toolchain  thumbv7em-linux-eabihf.json  thumbv7m-linux-eabi.json
.cargo/: config  rustc.sh
core/: Cargo.toml  build.rs
core/src/: cpu.rs  lib.rs
core/src/fib/stack/: fiber.rs
core/src/itm/: macros.rs  mod.rs
core/src/reg/: guard.rs  marker.rs  mod.rs
core/src/thr/: future.rs  int.rs  mod.rs  prelude.rs  request.rs  stream.rs  vtable.rs
device/: Cargo.toml  build.rs
device-0/: Cargo.toml  build.rs
device-1/: Cargo.toml  build.rs
device-2/: Cargo.toml  build.rs
device-3/: Cargo.toml  build.rs
device-4/: Cargo.toml  build.rs
device-5/: Cargo.toml  build.rs
device/pool-1/: Cargo.toml  build.rs
device/pool-10/: Cargo.toml  build.rs
device/pool-11/: Cargo.toml  build.rs
device/pool-12/: Cargo.toml  build.rs
device/pool-2/: Cargo.toml  build.rs  lib.rs
device/pool-3/: Cargo.toml  build.rs
device/pool-4/: Cargo.toml  build.rs
device/pool-5/: Cargo.toml  build.rs
device/pool-6/: Cargo.toml  build.rs
device/pool-7/: Cargo.toml  build.rs
device/pool-8/: Cargo.toml  build.rs
device/pool-9/: Cargo.toml  build.rs
device/src/: lib.rs  reg.rs  thr.rs
drv-adc/: Cargo.toml
drv-adc/src/: adc.rs  lib.rs
drv-dma/: Cargo.toml
drv-dma/src/: dma.rs  lib.rs
drv-dmamux/: Cargo.toml
drv-dmamux/src/: dmamux.rs  lib.rs
drv-etc/: Cargo.toml
drv-etc/src/: exti.rs  fpu.rs  gpio.rs  lib.rs  nvic.rs  rtc.rs  thr.rs
drv-etc/src/timer/: mod.rs  sys_tick.rs
drv-i2c/: Cargo.toml
drv-i2c-master/: Cargo.toml
drv-i2c-master/src/: i2c_master.rs  lib.rs
drv-i2c/src/: i2c.rs  lib.rs
drv-spi/: Cargo.toml
drv-spi/src/: lib.rs  spi.rs
macros/: Cargo.toml
macros/src/: int.rs  interrupt.rs  itm_update_prescaler.rs  lib.rs  sv.rs  sv_pool.rs  thr.rs  thr_int.rs  thr_nvic.rs  vtable.rs
scripts/: _env.sh  clippy.sh  doc.sh  test.sh
src/: cpu.rs  drv.rs  fib.rs  itm.rs  lang_items.rs  lib.rs  map.rs  mcu.rs  panicking.rs  platform.rs  prelude.rs  proc_loop.rs  processor.rs  reg.rs  rt.rs  stack_adapter.rs  stack_loop.rs  sv.rs  thr.rs  util.rs  vtable.rs
src/drivers/: dma.rs  exti.rs  gpio.rs  itm.rs  mod.rs  nvic.rs  prelude.rs  spi.rs  thrd.rs  thread.rs
src/drivers/timer/: mod.rs  sys_tick.rs
src/drv/: dma.rs  dmamux.rs  exti.rs  fpu.rs  gpio.rs  i2c.rs  i2c_dma_master_sess.rs  itm.rs  mod.rs  nvic.rs  prelude.rs  spi.rs  sys_tick.rs  thr.rs  timer.rs
src/drv/timer/: mod.rs  sys_tick.rs
src/fib/: cont.rs  continuation.rs  mod.rs  stack.rs
src/fib/proc/: fiber.rs  mod.rs  yielder.rs
src/fib/stack/: fiber.rs  mod.rs  yielder.rs
src/fiber/: mod.rs
src/itm/: macros.rs  mod.rs  port.rs
src/map/: mod.rs  reg.rs  thr.rs
src/map/periph/: fpu.rs  mod.rs  mpu.rs  sys_tick.rs  thr.rs
src/map/reg/: dwt.rs  fpu.rs  itm.rs  mod.rs  mpu.rs  scb.rs  stk.rs  tpiu.rs
src/map/res/: fpu.rs  mod.rs  mpu.rs  sys_tick.rs  thr.rs
src/peripherals/: dma.rs  exti.rs  gpio.rs  mod.rs  nvic.rs  prelude.rs  spi.rs  spi_dma.rs
src/peripherals/timer/: mod.rs  sys_tick.rs
src/reg/: atomic.rs  bindings.rs  bit_band.rs  field.rs  guard.rs  map.rs  mappings.rs  marker.rs  mod.rs  prelude.rs  scb.rs  shared.rs  stk.rs  tokens.rs
src/sv/: mod.rs  switch.rs
src/swo/: mod.rs  port.rs
src/task/: future.rs  mod.rs  stream.rs
src/thr/: config.rs  control.rs  exec.rs  future.rs  init.rs  int.rs  map.rs  mod.rs  nvic.rs  prelude.rs  request.rs  root.rs  stream.rs  trunk.rs  vtable.rs
src/thr/notify/: int.rs  mod.rs  nop.rs
src/thr/wake/: int.rs  mod.rs  nop.rs  root.rs  trunk.rs
src/thread/: control.rs  future.rs  interrupts.rs  irq.rs  mod.rs  prelude.rs  request.rs  stream.rs  thread_interrupt.rs  token.rs  vtable.rs
src/thread/notify/: irq.rs  mod.rs  nop.rs
svd/: Cargo.toml
svd/src/: device.rs  errors.rs  lib.rs
svd_files/: blank.svd
svd_files/patch/: add_dmamux.xml  add_fpu.xml  add_itm.xml  add_mpu.xml  add_scb.xml  add_scb_demcr.xml  add_stk.xml
tests/: peripherals.rs  thr_nvic.rs  vtable.rs
