cargo-features = ["resolver"]

[workspace]
members = ["macros"]

[package]
name = "drone-cortexm"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-cortexm"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-cortexm/0.14/drone_cortexm/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "arm",
    "cortex",
    "rtos",
    "bare-metal",
    "firmware",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
ARM® Cortex®-M platform crate for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["drone-core/std", "futures/std"]
bit-band = []
floating-point-unit = []
memory-protection-unit = []
security-extension = []

[dependencies.drone-cortexm-macros]
version = "=0.14.0"
path = "macros"

[dependencies.drone-core]
version = "0.14.0"
path = "../drone-core"

[dependencies]
futures = { version = "0.3.0", default-features = false }
