[workspace]
members = ["macros"]

[workspace.package]
version = "0.15.0"
authors = ["Valentyn Valiaiev <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone-cortexm"
homepage = "https://www.drone-os.com/"
license = "MIT OR Apache-2.0"

[workspace.dependencies.drone-cortexm-macros]
version = "=0.15.0"
path = "macros"

[workspace.dependencies.drone-config]
version = "0.15.0"
path = "../drone/config"

[workspace.dependencies.drone-core]
version = "0.15.0"
path = "../drone-core"

[workspace.dependencies.drone-macros-core]
version = "0.15.0"
path = "../drone-core/macros-core"

[package]
name = "drone-cortexm"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-cortexm/0.15/drone_cortexm/"
readme = "README.md"
keywords = [
    "arm",
    "cortex",
    "rtos",
    "bare-metal",
    "firmware",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
ARM® Cortex®-M platform crate for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
host = ["drone-core/host", "futures/std"]
atomics = ["drone-core/atomics"]
bit-band = []
floating-point-unit = []
memory-protection-unit = []
security-extension = []
all = ["bit-band", "floating-point-unit", "memory-protection-unit", "security-extension"]

[dependencies]
drone-core.workspace = true
drone-cortexm-macros.workspace = true
futures = { version = "0.3.24", default-features = false }

[build-dependencies]
drone-config.workspace = true
