[package]
name = "drone-stm32-drv-adc"
version = "0.9.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Drone for STM32. ADC driver."
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-stm32"

[features]
default = []
stm32f100 = []
stm32f101 = []
stm32f102 = []
stm32f103 = []
stm32f107 = []
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x5 = []
stm32l4x6 = []
stm32l4r5 = []
stm32l4r7 = []
stm32l4r9 = []
stm32l4s5 = []
stm32l4s7 = []
stm32l4s9 = []

[dependencies.drone-core]
version = "=0.9.0"
git = "https://github.com/drone-os/drone-core"
# path = "../../drone-core"

[dependencies.drone-stm32-core]
version = "0.9.0"
path = "../core"

[dependencies.drone-stm32-device]
version = "=0.9.0"
path = "../device"

[dependencies.drone-stm32-drv-dmamux]
version = "0.9.0"
path = "../drv-dmamux"

[dependencies.drone-stm32-drv-dma]
version = "0.9.0"
path = "../drv-dma"

[dependencies.futures-preview]
version = "0.2"
default-features = false

[dependencies.failure]
version = "0.1"
default-features = false

[dependencies.failure_derive]
version = "0.1"
default-features = false
