[package]
name = "drone-cortexm-macros"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-cortexm"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-cortexm/0.14/drone_cortexm_macros/"
license = "MIT OR Apache-2.0"
description = """
Procedural macros for drone-cortexm.
"""

[lib]
proc-macro = true

[dependencies.drone-macros-core]
version = "0.14.0"
path = "../../drone-core/macros-core"

[dependencies]
Inflector = "0.11"
proc-macro2 = "1"
quote = "1"
syn = "1"
