[package]
name = "drone-cortexm-macros"
version = "0.15.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone-cortexm"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-cortexm/0.15/drone_cortexm_macros/"
license = "MIT OR Apache-2.0"
description = """
Procedural macros for drone-cortexm.
"""

[lib]
proc-macro = true

[dependencies.drone-macros-core]
version = "0.15.0"
path = "../../drone-core/macros-core"

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"
