[package]
name = "drone-cortexm-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-cortexm/0.15/drone_cortexm_macros/"
description = """
Procedural macros for drone-cortexm.
"""

[lib]
proc-macro = true

[dependencies]
drone-macros-core.workspace = true
heck = "0.4.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"
