[package]
name = "drone-stm32-svd"
version = "0.8.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Drone for STM32 bindings generator."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-stm32"

[dependencies]
failure = "0.1"
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.2"
quote = "0.3"
syn = "0.11"

[dependencies.clippy]
version = "0.0"
optional = true
