[package]
name = "drone-stm32-svd"
version = "0.8.2" # remember to update html_root_url
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Drone for STM32 bindings generator."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-stm32"

[dependencies]
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.2"

[dependencies.drone-mirror-failure]
version = "0.1"
default-features = false
features = ["std"]
