[package]
name = "drone-stm32-svd"
version = "0.9.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Drone for STM32 bindings generator."
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-stm32"

[dependencies]
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.2"
xml-rs = "0.8"

[dependencies.drone-mirror-failure]
version = "0.1"
git = "https://github.com/drone-os/drone-mirror-failure"
branch = "version-0.1"
default-features = false
features = ["std"]
