[package]
name = "drone-stm32-device-pool-2"
version = "0.9.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Drone for STM32. Devide mappings."
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-stm32"

[lib]
path = "lib.rs"

[features]
default = []
stm32f100 = []
stm32f101 = []
stm32f102 = []
stm32f103 = []
stm32f107 = []
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x5 = []
stm32l4x6 = []
stm32l4r5 = []
stm32l4r7 = []
stm32l4r9 = []
stm32l4s5 = []
stm32l4s7 = []
stm32l4s9 = []

[dependencies.drone-stm32-core]
version = "0.9.0"
path = "../../core"

[dependencies.drone-core]
version = "=0.9.0"
git = "https://github.com/drone-os/drone-core"
# path = "../../../drone-core"

[build-dependencies.drone-stm32-svd]
version = "=0.9.0"
path = "../../svd"
